# baseboard

./: Cargo.toml
migrations/: 20230904184924_create_subscriptions_table.sql
scripts/: init_db.sh
src/: app.rs  config.rs  lib.rs  main.rs
